# macroland

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  macrolandframework.sln  readme.md  sciencesuit_app.sln
64Bit/: _appinit_.py  _appstartup_.py  _frmwork_.py  _init.py  _settings.json  _workbook_.py  dummy.py
64Bit/_sci/: Frame.py  __init__.py  events.py  extend.py  extension.py  extensions.py  framework.py  gridtext.py  icell.py  makeicon.py  numtext.py  pandas.py  path.py  pkg.py  pnlOutputOptions.py  styles.py  temporary.py  util.py  vars.py  widgets.py
64Bit/config/: ws_pagechanged.py  ws_selecting.py
64Bit/events/: __init__.py  _ws_selecting.py  ws_pagechanged.py  ws_selected.py  ws_selecting.py
64Bit/extensions/: manifest_example.lua
64Bit/extensions/01 charts/: __init__.py  _init_.py  _toolbarpage.py  boxwhisker.py  bubble.py  col_cluster.py  col_stk.py  column.py  histogram.py  moody.py  psychart.py  qqchart.py  scatter.py  ws_tbar.lua  ws_tbar.py
64Bit/extensions/02 essential_stat_tests/: frmDescriptiveStats.py  frmrandnumgener.py  frmtest_sign.py  frmtestt_2sample.py  manifest.lua  ws_tbar.lua
64Bit/extensions/02 statistics/: __init__.py  _init_.py  frmDescriptiveStats.py  frmSampling.py  frmanova_singlefactor.py  frmanova_twofactor.py  frmaov1_stk.py  frmaov1_unstk.py  frmaov2.py  frmrandnumgener.py  frmregression_linear.py  frmtest_f.py  frmtest_sign.py  frmtest_z.py  frmtestnormality.py  frmtestt_1sample.py  frmtestt_2sample.py  frmtestt_paired.py  manifest.json  manifest.lua  ws_tbar.lua
64Bit/extensions/03 processeng/: USDANALSR28.db  __init__.py  _init_.py  _toolbarpage.py  frmFoodDatabase.py  frmFoodThermalProc.py  frmPsychrometry.py  manifest.json  manifest.lua
64Bit/extensions/charts/: boxwhisker.py  histogram.py  manifest.lua  qqchart.py  scatter.py  ws_tbar.lua
64Bit/extensions/data_wrangle/: frmDelimTxt.py  (+6 more)
64Bit/oninit/: _init_.py  pagechanged.py  selected.py  selecting.py
grid/: CMakeLists.txt  dllimpexp.h  events.cpp  events.h  grid.aps  grid.rc  grid.vcxproj  grid.vcxproj.filters  gridtextctrl.cpp  gridtextctrl.h  ntbkbase.cpp  ntbkbase.h  rangebase.cpp  rangebase.h  resource.h  selrectbase.h  undoredo.h  workbookbase.cpp  workbookbase.h  worksheetbase.cpp  ws_cell.cpp  ws_cell.h  ws_funcs.cpp  ws_funcs.h  ws_xml.cpp  ws_xml.h
macroland/: CMakeLists.txt  consts.h  cpp.hint  exceptions.h  macroland.aps  macroland.filters  macroland.rc  macroland.vcxproj  macrolandapp.cpp  macrolandapp.h  resource.h  sciencesuit.aps  sciencesuit.vcxproj  util_funcs.cpp  util_funcs.h
macroland/cmdwnd/: autocompletion.cpp  autocompletion.h  cmdline.cpp  cmdline.h  pnlHistory.cpp  pnlHistory.h  pnlcmdwnd.cpp  pnlcmdwnd.h  pnlvariablebrowser.cpp  pnlvariablebrowser.h  scripting_funcs.cpp  scripting_funcs.h  styledtxtctrl.cpp  styledtxtctrl.h
macroland/extension/: guielements.cpp
macroland/grid/: events.h  ntbkbase.h  rangebase.h  undoredo.cpp  undoredo.h  workbookbase.cpp  workbookbase.h  worksheetbase.cpp  worksheetbase.h  ws_cell.cpp  ws_cell.h  ws_funcs.cpp  ws_funcs.h
macroland/icell/: Workbook.cpp  Worksheet.cpp  popupalign.cpp  popupalign.h  workbook.h  worksheet.h  wsntbk.cpp  wsntbk.h
macroland/icons/: mainframeicon.xpm
macroland/icons/sz16/: align_horizontalcenter.xpm  align_left.xpm  align_right.xpm  align_verticalbottom.xpm  align_verticalcenter.xpm  align_verticaltop.xpm  delete.xpm  icons16.h  py_logo16.xpm  replace.xpm  replaceall.xpm
macroland/icons/sz32/: font_bold.xpm  font_italic.xpm  font_underlined.xpm  fontproperties.xpm  format_fillcolor.xpm  format_fontcolor.xpm  icons32.h  menu.xpm  pyc_logo32.xpm  script_load.xpm  script_new.xpm  settings.xpm
macroland/lua/: baseelement.cpp  buttons.cpp  lua_button.cpp  lua_guielements.cpp  lua_guielements.h  lua_guifuncs.cpp  lua_menu.cpp  lua_panel.cpp  lua_toolbarpage.cpp  lua_wrapelems.cpp  luautil.cpp  luautil.h  menuelem.cpp  menuelem.h  registerlua.h  registerribbontoluavm.h  toolbarntbk.cpp  toolbarntbk.h
macroland/lua/widgets/: baseelement.h  buttons.h  panel.cpp  panel.h
macroland/lua/wrap/: lua_button.cpp  lua_guifuncs.cpp  lua_menu.cpp  lua_panel.cpp  lua_toolbarpage.cpp
macroland/mainfrm/: extension.cpp  extension.h  frmextensionmngr.cpp  frmextensionmngr.h  frmmacroland.cpp  frmmacroland.h  icell.cpp  icell.h  interactstatbar.cpp  interactstatbar.h  pnlextmngr.cpp  pnlextmngr.h  popupapps.cpp  popupapps.h  topbar.cpp  topbar.h
macroland/python/: PythonWrapper.cpp  PythonWrapper.h  callbackfunction.h  cls_icell.cpp  guielements.cpp  guielements.h  pkg_scisuit.cpp  pkg_scisuit.h  registertopython.h
macroland/scripting/: cmdline.cpp  cmdline.h  frmscripteditor.cpp  frmscripteditor.h  pnlHistory.cpp  pnlcmdwnd.cpp  pnlpathbrowse.cpp  pnlpathbrowse.h  scriptctrl.cpp  scriptnotebook.h
macroland/scripting/cmdedit/: cmdline.cpp  pnlHistory.h  pnlcmdwnd.cpp  pnlpathbrowse.cpp  pnlvariablebrowser.cpp  pnlvariablebrowser.h
macroland/scripting/editor/: frmscripteditor.cpp  scriptctrl.cpp  scriptctrl.h  scriptnotebook.cpp
macroland/util/: cdate.cpp  cdate.h  filearchive.cpp  filearchive.h  json.cpp  json.h  recentfiles.cpp  recentfiles.h  util_funcs.cpp  util_funcs.h  util_python.cpp  util_python.h  util_string.cpp  util_string.h  util_wx.cpp  util_wx.h
pypkgmngr/: CMakeLists.txt  frmpypkgmngr.cpp  frmpypkgmngr.h  pypkgmngr.aps  pypkgmngr.rc  pypkgmngr.vcxproj  pypkgmngr.vcxproj.filters  pypkgmngrapp.cpp  pypkgmngrapp.h  resource.h  util_funcs.cpp  util_funcs.h
pypkgmngr/icons/: python_logo.xpm
script/: CMakeLists.txt  autocompletion.cpp  autocompletion.h  directoryctrl.cpp  directoryctrl.h  dllimpexp.h  inputwndbase.cpp  inputwndbase.h  lexer.h  pnlpathbrowse.cpp  pnlpathbrowse.h  popuphtml.cpp  popuphtml.h  resource.h  script.aps  script.rc  script.vcxproj  script.vcxproj.filters  scriptctrlbase.cpp  scriptctrlbase.h  scripting_funcs.cpp  scripting_funcs.h  scriptviewer.cpp  scriptviewer.h  styledtxtctrl.cpp  styledtxtctrl.h
script/cmdwnd/: inputwndbase.cpp  inputwndbase.h  outputwnd.cpp  outputwnd.h
script/icons/: pyc_logo16.xpm
(+46 files in other folders)
